# stack-in-haskell

./: CHANGELOG.md  Main.hs  README.md  Stack.hs  programa.txt  trab2linguagens.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
